Add most locales, make loading lazy